# audio-instruction

./: .gitignore  DOCKER_YT_DOWNLOAD.md  Dockerfile  Dockerfile.test  README.md  TESTING_IN_DOCKER.md  entrypoint.sh  pyproject.toml  run_yt_test_docker.sh  setup.py  test_docker_yt_download.py  test_docker_yt_download.sh  test_yt_download.py
audio_instruction/: __init__.py
audio_instruction/api/: __init__.py  app.py  models.py
audio_instruction/cli/: __init__.py  main.py
audio_instruction/core/: __init__.py  audio.py  browser_download.py  tts.py  validation.py  workout.py
docker/: Dockerfile.api  Dockerfile.cli  Dockerfile.test  docker-compose.yml
examples/: hiit.json  hiit.txt  hiit.yml  stretch.json
examples/basic/: generate_workout.py
examples/deployment/: cloud_run_tutorial.md
examples/docker/: README.md  quick_test.txt
examples/sample_workouts/: hiit.json  hiit.txt  hiit.yml  hiit_with_config.json  stretch.json
tests/: README.md  __init__.py  cleanup_old_tests.py  run_tests.py  test_audio_download.py  test_audio_normalization.py  test_audio_processing.py  test_interfaces.py  test_media_download.py  test_multiple_backgrounds.py  test_validation.py  test_workout_audio_merging.py  test_workout_generation.py
